--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -39,6 +39,10 @@
           <%= f.label "Link to promotional video if you have one" %>
           <%= f.text_field :promo_video, class: 'form-control' %>
         </div>
+        <div class="check-box">
+          <%= f.label "LinkedIn profile" %>
+          <%= f.text_field :linked_in, class: 'form-control' %>
+        </div>
         <div class="form-group">
           <%= f.label "Any other comments?" %>
           <%= f.text_area :other, class: 'form-control' %>
