--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,52 +9,55 @@
         <p>Create your profile so that you can share your information with the community.</p>
         <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-primary btn-lg btn-block'%>
       <% end %>
+      <% if current_user.has_role?(:admin) %>
+        <h4><%= link_to "Approve member applications", user_approvals_path,  class: 'btn btn-primary btn-lg btn-block' %></h4>
+      <% end %>
 
       <br/>
       <br/>
-      
+
       <h2>Edit Username and Password</h2>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
-  
+
         <div class="field">
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true %>
         </div>
-      
+
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
-  
+
         <div class="field">
           <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
           <%= f.password_field :password, autocomplete: "off" %>
         </div>
-      
+
         <div class="field">
           <%= f.label :password_confirmation %><br />
           <%= f.password_field :password_confirmation, autocomplete: "off" %>
         </div>
-  
+
         <div class="field">
           <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
           <%= f.password_field :current_password, autocomplete: "off" %>
         </div>
-        
+
         <br/>
-      
+
         <div class="actions">
           <%= f.submit "Update", class: 'btn btn-primary btn-lg btn-block' %>
         </div>
         <% end %>
-        
+
         <br/>
         <br/>
-  
+
         <h3>Cancel my account</h3>
-        
+
         <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-        
+
         <%= link_to "Back", :back %>
       </div>
   </div>
