added louise photo & styles on about page

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -41,7 +41,7 @@
     <div class="row">
       
         <div class="col-md-4">
-            <%=image_tag("user-photo.png", alt: "Louise Photo", class: "profilePic")%>
+            <%=image_tag("louise2.jpg", alt: "Louise Photo", class: "profilePic")%>
         </div>
         
         <div class="col-md-8">
