Add details on user to user index

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -33,6 +33,8 @@
 /* Users Index Page Styles */
 .user-index-avatar {
   border-radius: 50%;
+  height: 100px;
+  width: 100px;
 }
 .well.white-bg {
   background-color: white;
