--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,6 +20,9 @@
                 <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
               <% end %>
                 <p>
+                  <b><%= user.plan.name %></b>
+                </p>
+                <p>
                   <%= user.profile.services_interest_in %>
                   <% if user.plan_id == 3 %>
                     <span class="label label-danger">Corporate</span>
