--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,22 +3,22 @@
         <p class="logo"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo", class: "img-responsive center-block")%></p>
     </div>
 
-    <div class="row text-center">
+    <div class="row text-center about">
         <h3>Our Mission</h3>
         <p>To connect migrant entrepreneurs and promote their role in global economic and social development.</p>
     </div>
     
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 well-clear spacer">
             <h3>Our Beliefs</h3>
             <p>We believe that migrant entrepreneurs play a positive role in the economic and social development of the country they live in.</p>
             <p>We believe that the migrant population have strong entrepreneurial skills and can adapt to any economic environment.</p>
             <p>We believe that the success of migrant entrepreneurs is due to their diverse networks, social resilience, economic resourcefulness and business creativity.</p>
         </div>    
-    </div>
+  
     
-    <div class="row">
-        <div class="col-md-4">
+
+        <div class="col-md-4 well-clear spacer">
             <h3>Our Objectives</h3>
             <p><ol>
             <li>To recognize the positive contribution of migrant entrepreneurs globally.</li>
@@ -26,10 +26,8 @@
             <li>To promote sustainable and responsible practices by migrant entrepreneurs.</li>
             </ol></p>
         </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-md-4">
+
+        <div class="col-md-4 well-clear spacer">
             <h3>Our Methods</h3>
             <p>We have three methods to achieve our objectives:</p>
             
@@ -39,15 +37,15 @@
         </div>
     </div>
     
-    <div class="row">
+    <div class="row text-center">
         <h3>Our 2020 Challenge</h3>
         <p>By the end of 2014, global forced displacement reached 50 million - the highest level ever recorded by UNHCR. Conflict, global inequalities and environmental changes are forcing people to migrate in search of better lives and economic opportunities. However, these migrants are often marginalized, exploited and excluded from socio-economic opportunities in the countries they travel to.
         Paradoxically, the research shows that migrants are more likely to start a business and create job opportunities thus adding to the host country’s economic growth. Our challenge is to connect migrant entrepreneurs globally and to tackle the legal, cultural and political obstacles they face. By 2020 we aim to connect 2,020 migrant entrepreneurs around the world through our enabling platform.</p>
     </div>
     
-    <div class="row">
+    <div class="row text-center">
         <h3>How Are We Going To Do It?</h3>
-        <p><ul>
+        <p><ul class="noBullet">
             <li>We will encourage migrant entrepreneurs to self-organise into national and city-based hubs, to support each other and communicate with the global Network.</li>
             <li>We will ask each migrant entrepreneur in the Network to share their story in a short video clip, including their three best entrepreneurial tips.</li>
             <li>We will develop and deliver social enterprise training for members around the world, as well as offer train-the-trainer courses for local entrepreneurs.</li>
