--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -23,6 +23,16 @@
           <%= f.label "Do you own a business?" %>
           <%= f.select :own_business, ['Yes', 'No'], {}, class: 'form-control' %>
         </div>
+        
+        <div class="form-group">
+          <%= f.label "What is the Name of your Business?" %>
+          <%= f.text_field :business_name, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label "Please share a link to your website" %>
+          <%= f.text_field :business_website, class: 'form-control' %>
+        </div>
+        
         <div class="check-box">
           <%= f.label "Are you starting a business?" %>
           <%= f.select :starting_business, ['Yes', 'No'], {}, class: 'form-control' %>
