--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,12 @@
         <%= @user.profile.country_of_origin %>
       <h5>Business Owner?</h5>
         <%= human_bool(@user.profile.own_business) %>
+      
+      <h5>Name of Busines</h5>
+        <%= @user.profile.business_name %>
+      <h5>Business Website</h5>
+        <%= link_to @user.profile.business_website, @user.profile.business_website, target: "_blank" %>
+        
       <h5>Starting a Business?</h5>
         <%= human_bool(@user.profile.starting_business) %>
       <h5>Nature of the Business(es)</h5>
