added profile to team page

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -80,5 +80,19 @@
             <p>Nyasha has won a variety of business awards. She has recently published her first book, Walk with me through sixteen inspirational business and life tips. She lives in Buckinghamshire with her husband and has three adult children.</p>
         </div>
     </div>
+    
+    <div class="row">
+      
+        <div class="col-md-4">
+            <%=image_tag("amos.JPG", alt: "Amos Photo", class: "profilePic")%>
+        </div>
+        
+        <div class="col-md-8">
+            <h3>Amos Doornbos</h3>
+            <p>Amos’s experience in strategy, operations management, and programme development across a wide array of cultures and organisations has sharpened his ability to listen to the needs and desires of communities and organisations, while asking challenging questions which enable fresh insights to surface. He enjoys working with those engaged on the frontline of customer or community interface, assisting them in working through challenges by analysing the context they operate within to find innovative solutions.</p>
+            <p>Over the past number of years, Amos has lived and worked in many of the world’s disaster zones, including Darfur, Indonesia, Pakistan and Eastern DRC, working with communities to rebuild their lives after living through horrific experiences. He brings a wealth of experience in innovation, in bringing structure to chaotic situations and partnering with successful, inspiring organisations at community level in developing countries as well as social entrepreneurships across all walks of life around the world.</p>
+            <p>Amos is the Director of Faces of Another World – a dynamic young company passionate about connecting different sectors of society to find innovative solutions for people who earn a dollar or two a day. He is also the founder of Give Aid Direct – a charity enabling person-to-person giving in the immediate aftermath of disasters.</p>
+        </div>
+    </div>
 
 </div>
