Add business name and website to the form

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,10 @@
                 <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
               <% end %>
                 <p>
-                  <b><%= user.plan.name %></b>
+                  <b>
+                    <%= user.plan.name %>
+                    <%= user.profile.business_name_present %>
+                  </b>
                 </p>
                 <p>
                   <%= user.profile.services_interest_in %>
