Add youtube video

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,8 +4,9 @@
     </div>
 
     <div class="row text-center about">
-        <h3>Our Mission</h3>
-        <p>To connect migrant entrepreneurs and promote their role in global economic and social development.</p>
+      <h3>Our Mission</h3>
+      <p>To connect migrant entrepreneurs and promote their role in global economic and social development.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/6-D1dOexNrM" frameborder="0" allowfullscreen></iframe>
     </div>
     
     <div class="row">
