--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -16,14 +16,12 @@
 }
 
 .well.profile-block {
-  color: #fff;
   h3 {
     margin-top: 0;
   }
 }
 .well.profile-description {
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+  background-color: #F8F8F8;
 }
 .well.contact-info {
   background-color: #5bc0de;
