Change ngo plan name

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
       <p class="text-center">Sign up for free and get basic access to the community.</p>
       
     <% else %>
-      <h1 class="text-center">Academnic/NGO Account</h1>
+      <h1 class="text-center">Expert</h1>
       <p class="text-center">Sign up for free and get basic access to the community.</p>
     <% end %>
     
