--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -118,14 +118,14 @@
         
         <div class="col-md-4">
           <div class="well-clear fill">
-            <h2 class="text-center">Academic/NGO Membership</h2>
+            <h2 class="text-center">Expert</h2>
             <h4><ul>
               <li>Offer talks, training courses, venues and other support</li>
               <li>Develop case studies and media features</li>
               <li class="learn"><%= link_to "Click here to learn more membership options", membership_path %></li>
             </ul></h4>
             <br/>
-            <%= link_to "Sign up as an Academic/NGO", new_user_registration_path(plan: @academic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+            <%= link_to "Sign up as an expert", new_user_registration_path(plan: @academic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
           </div>
         </div>
         
