--- a/app/views/pages/membership.html.erb
+++ b/app/views/pages/membership.html.erb
@@ -41,14 +41,14 @@
     <div class="row">    
         <div class="col-md-6">
           <div class="well-clear">
-            <h2 class="text-center">Academic/NGO Membership</h2>
+            <h2 class="text-center">Expert Membership</h2>
             <h4><ul>
               <li>Access to a network of migrant entrepreneurs with which to conduct research projects.</li>
               <li>Offer pro-bono talks, training courses, venues and other support for the Migrant Entrepreneurs Network, globally or through the national and city Hubs.</li>
               <li>Develop case studies and media features that profile the inspiring stories migrant entrepreneurs in the Network and the challenges they face</li>
             </ul></h4>
             <br/>
-            <%= link_to "Sign up as an Academic/NGO", new_user_registration_path(plan: @academic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+            <%= link_to "Sign up as an expert", new_user_registration_path(plan: @academic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
           </div>
         </div>
         
