added shutterstock images, updated Louise's bio, fixed style issues

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -99,6 +99,7 @@
               <li class="learn"><%= link_to "Click here to learn more membership options", membership_path %></li>
             </ul></h4>
             <br/>
+            <br/>
             <%= link_to "Sign up as an Entrepreneur", new_user_registration_path(plan: @ent_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
           </div>
         </div>
@@ -118,7 +119,7 @@
         
         <div class="col-md-4">
           <div class="well-clear fill">
-            <h2 class="text-center">Expert</h2>
+            <h2 class="text-center">Expert</br>Membership</h2>
             <h4><ul>
               <li>Offer talks, training courses, venues and other support</li>
               <li>Develop case studies and media features</li>
