--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -46,7 +46,11 @@
         
         <div class="col-md-8">
             <h3>Louise Thomson</h3>
-            <p>Louise works with entrepreneurs and social entrepreneurs to close the gap between the for-profit and non-profit sectors. She recently helped to develop a new social startup training programme in Brazil by delivering workshops and consultancy sessions to social entrepreneurs in Rio de Janeiro. She is currently managing the launch and day-to-day operations of a new online accelerator programme for digital entrepreneurs. Louise began her career as a business intelligence analyst investigating corporate fraud and corruption in Europe, the CIS and Latin America. She has a first-class degree in Modern Languages (Russian and Portuguese) from the University of Cambridge</p>
+            <p>Louise currently an Associate at On Purpose, a one-year social enterprise leadership programme. She was thrown head-first into the world of social enterprise when she quit her job to spend a summer volunteering in Brazil as a social enterprise consultant, where she delivered workshops and consultancy sessions to social entrepreneurs from Rio de Janeiro’s favela communities.</p>
+            <p>Since returning from Brazil, Louise has been involved with a range of projects to promote entrepreneurship as a tool for economic empowerment and social enterprise as a solution to global challenges. She has worked freelance for two digital startups, co-organized an event promoting female techpreneurs at the House of Commons and joined the advisory board of the Migrant Entrepreneurs Network. She co-organised Hackney FoodCycle’s first fundraiser and was a guest speaker at the social enterprise session of StartupEurope Week 2016.</p>
+            <p>Before moving into social enterprise Louise worked as a corporate investigator, helping clients to navigate business risk, fraud and corruption in challenging global markets. As a Russian and Portuguese speaker she focused on cases in the former Soviet Union and Latin America, which prompted a growing frustration with the unequal and unjust distribution of wealth and resources - both internationally and at home.</p>
+            <p>Louise has a first-class degree in Modern Languages from the University of Cambridge.</p>
+            
         </div>
     </div>
     
