changed wording on approval email

--- a/app/views/user_mailer/approved.html.erb
+++ b/app/views/user_mailer/approved.html.erb
@@ -1,1 +1,6 @@
-<p>You application to join the Migrant Network has been approved. Head <%= link_to "here", ENV['ROOT_URL'] + new_user_session_path %> to login and join the community.</p>
+<p>Thank you for joining Migrant Entrepreneurs Network. We are pleased to confirm that your application has been approved. Please click <%= link_to "here", ENV['ROOT_URL'] + new_user_session_path %> to login and join the community.</p>
+
+<p>Best wishes</p>
+<p>Migrant Entrepreneurs Network team</p>
+
+
