fixed some spelling mistakes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
           </button>
           
           <%= link_to root_path, class: 'navbar-brand' do %>
-            <p class="textColor"><%=image_tag("LogoImage.png", alt: "Migrant Entrepreneurs Logo", class: "favicon")%>Migrant Entrepeneurs Network</p>
+            <p class="textColor"><%=image_tag("LogoImage.png", alt: "Migrant Entrepreneurs Logo", class: "favicon")%>Migrant Entrepreneurs Network</p>
             <!--<i class="fa fa-users"></i>-->
             
           <% end %>
