--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <h1 class="text-center">Create Your Profile</h1>
-    <p class="text-center">Be a part of the Migrant Entrepreneur Network and fill out your profile!</p>
+    <p class="text-center">Be a part of the Migrant Entrepreneurs Network and fill out your profile!</p>
     
     <div class="well">
       <%= render 'form' %>
