--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -8,7 +8,7 @@
           <%= f.text_field :last_name, class: 'form-control' %>
         </div>
         <div class="form-group">
-            <%= f.label "Photo" %>
+          <%= f.label "Photo" %><span> File size must be less than 5Mb. Recommended dimensions: 300x300px.
             <%= f.file_field :avatar, class: 'form-control' %>
         </div>
         <div class="form-group">
