--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -21,7 +21,7 @@
         </div>
         <div class="check-box">
           <%= f.label "Do you own a business?" %>
-          <%= f.select :own_business, ['Yes', 'No'], {}, class: 'form-control' %>
+          <%= f.select :own_business, [['Yes', 1], ['No', 0]], {}, class: 'form-control' %>
         </div>
         
         <div class="form-group">
@@ -35,7 +35,7 @@
         
         <div class="check-box">
           <%= f.label "Are you starting a business?" %>
-          <%= f.select :starting_business, ['Yes', 'No'], {}, class: 'form-control' %>
+          <%= f.select :starting_business, [['Yes', 1], ['No', 0]], {}, class: 'form-control' %>
         </div>
         <div class="form-group">
           <%= f.label "What is the nature of your business(es)?" %>
