updated logo on home, about, & application

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
     <div class="row text-center">
-        <p class="logo"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo", class: "img-responsive center-block")%></p>
+        <p class="logo"><%=image_tag("MEI-200.png", alt: "Migrant Entrepreneurs Logo", class: "img-responsive center-block")%></p>
+    <br>
+    <br>
     </div>
 
     <div class="row text-center about">
