--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,10 +4,10 @@
     
     <div class="row" >
       <div class="col-md-12">
-        <p class="text-center"><%=image_tag("MigrantEnterpreneursLogoClear.png", alt: "Migrant Entrepreneurs Logo", class: "img-responsive center-block") %></p>
+        <p class="text-center"><%=image_tag("MEI-150.png", alt: "Migrant Entrepreneurs Logo", class: "img-responsive center-block") %></p>
       </div>
       <div class="col-md-12">
-        <h1 class="text-center">Welcome to The Migrant Entrepreneurs Network</h1>
+        <h1 class="text-center">Welcome to Migrant Entrepreneurs International</h1>
         <h3 class="text-center">Connecting. Educating. Developing.</h3>
       </div>
     </div>
