--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -49,8 +49,8 @@
     <div class="row text-center">
         <h3>How Are We Going To Do It?</h3>
         <p><ul class="noBullet">
-            <li>We will encourage migrant entrepreneurs to self-organise into national and city-based hubs, to support each other and communicate with the global Network.</li>
-            <li>We will ask each migrant entrepreneur in the Network to share their story in a short video clip, including their three best entrepreneurial tips.</li>
+            <li>We will encourage migrant entrepreneurs to self-organise into national and city-based hubs, to support each other and communicate with the global network.</li>
+            <li>We will ask each migrant entrepreneur in the network to share their story in a short video clip, including their three best entrepreneurial tips.</li>
             <li>We will develop and deliver social enterprise training for members around the world, as well as offer train-the-trainer courses for local entrepreneurs.</li>
             <li>We will establish a network of responsible corporations committed to supporting and collaborating with migrant entrepreneurs globally.</li>
             <li>We will encourage migrant entrepreneurs hubs to hold annual national and regional meetings and conferences.</li>
