changed Indira's bio and deleted Nyasha's

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -11,11 +11,10 @@
         
         <div class="col-md-8">
             <h3>Indira Kartallozi</h3>
-            <p>Indira Kartallozi is the founder and director of Chrysalis Family Futures – a social enterprise that stands for protection and empowering of human and socio-economic rights of vulnerable and marginalised families and children. She is also the founder of the Migrant Entrepreneurs Network.</p>
-            <p>Her work with Chrysalis Family Futures has taken her to various countries in Africa, Asia, Europe and Latin America. In the UK, she works as a Legal Advisor for Freedom From Torture, a Senior Case Worker for Baobab Centre for Young Survivors in Exile, and a Welfare Rights and Housing Advisor at Haringey Migrant Support Centre.</p>
-            <p>In 2015, Indira was a top 5 finalist in the Migrant Woman of the Year. She is also on the Advisory Board of the Social Enterprise Reporting Awards, an initiative of CSR Nigeria.</p>
-            <p>Indira has 15-year experience in advice on welfare, housing and immigration rights and her expertise ranges on issues of forced migration and human rights, social entrepreneurship and gender equality.</p>
-            <p>Since completing her MA in Refugee Studies and her ground breaking research on austerity and welfare reforms Indira has been invited to speak to various conferences and seminars around the world. </p>
+            <p>Indira Kartallozi is the founder and director of Chrysalis Family Futures – a social enterprise that stands for protection and empowering of human and socio-economic rights of vulnerable and marginalised families and children. She is also the founder of the Migrant Entrepreneurs International.</p>
+            <p>Her work and expertise has taken her to various countries in Africa, Asia, Europe and Latin America. In the UK, Indira works as a freelance welfare rights advisor at Freedom From Torture. She is also on the Advisory Board of GERMIN, a Kosovo diaspora initiative, and ‘Impacto’, a Malaysian social enterprise. Previously, she was President of the judging panel for the Social Enterprise Reporting Awards (SERAs), an initiative of CSR Nigeria.</p>
+            <p>Indira has over 15-years of experience in advice on welfare, housing and immigration rights and her expertise ranges from issues of forced migration and human rights, to social entrepreneurship and gender equality.</p>
+            <p>Since completing her MA in Refugee Studies and her groundbreaking research on austerity and welfare reforms, Indira has been invited to speak at various conferences and seminars around the world.</p>
         </div>
     </div>
 
@@ -67,21 +66,6 @@
             <p>Yuliana is a co-founder and co-director of the award-winning and quality-accredited social franchise, My OutSpace Business Centre (www.myoutspace.co.uk), which specialises in supporting women into employment and self-employment. She has supported  over 200 businesses in the last 3 years, most of which are run by women-migrants.</p>
 
             <p>Yuliana has been named a Purley Local StartUp Britain Champion; won several business awards, including Croydon Business Awards in 2013, Best Social Enterprise, Business Advisor Award and been in the final for the Migrant Woman of the Year Award. Yuliana understands challenges small businesses face especially those run by women-migrants and those with children. She is very passionate about creating awareness about how much migrants contribute to the economy and rights for parents'</p>
-        </div>
-    </div>
-    
-    <div class="row">
-      
-        <div class="col-md-4">
-            <%=image_tag("Nyasha2.jpg", alt: "Nyasha Photo", class: "profilePic")%>
-        </div>
-        
-        <div class="col-md-8">
-            <h3>Nyasha Gwatidzo</h3>
-            <p>Nyasha was born in Zimbabwe and gained a degree in Chemistry from London University. She then went on to retrain at Reading University and gained an MA, to work with adults and children with emotional issues. She is a qualified psychotherapist, social worker, coach and mentor.</p>
-            <p>She is a social entrepreneur, working with disadvantaged people in the UK and Africa. She runs a multimillion pound social enterprise Banya, which finds foster families for children in the care of local authorities. She founded a charity in the UK, Vana Trust which raises funds for children affected by HIV and AIDS in Zimbabwe, supporting their education. The Trust also supports adults and young people here in the UK who have learning and emotional difficulties, through her organic farm in Buckinghamshire.</p>
-            <p>Her vision for the future is to forge global connections with women in the developing world who inspire her everyday. She would like them to reach economic independence through enterprise. With this in mind she has set up World Impact Capital, a social impact investment  £100 million fund to support women entrepreneurs and she currently mentors people starting up in business.</p>
-            <p>Nyasha has won a variety of business awards. She has recently published her first book, Walk with me through sixteen inspirational business and life tips. She lives in Buckinghamshire with her husband and has three adult children.</p>
         </div>
     </div>
     
