add KisH profile to team page

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -56,6 +56,21 @@
     <div class="row">
       
         <div class="col-md-4">
+            <%=image_tag("KisH2.jpg", alt: "KisH Photo", class: "profilePic")%>
+        </div>
+        
+        <div class="col-md-8">
+            <h3>Kishore Ravuri</h3>
+            <p>Kishore Ravuri aka KisH is a regional practitioner, with special interest in fostering partnerships that help create ‘impact’ that is meaningful, measurable, and mutual. In his current role as the Founder & Chief Impact Officer of IMPACTO SDN BHD, KisH works with governments, businesses, not-for-profit sector and civil society to revisit and recast the paradigm of ‘impact’ in the context of sustainable development.</p>
+            <p>With an international orientation on CSR & Sustainability and good understanding of Asian perspectives, KisH mobilises global experts to review where actors stand in their Sustainability Journey and helps them re-strategise their sustainability goals, aspirations, outcomes and impact. He has participated in many capacity-building programmes involving entrepreneurs championing SMEs in various sectors to include frontier technology, agriculture and education.</p>
+            <p>His current research areas include - Partnerships to mitigate Migrant Labour Issues in Palm Oil Plantations and Partnerships for Circular Economy Solutions. He is also working to build a social innovation programme for young potential entrepreneurs employed in corporate sector of Malaysia.</p>
+            
+        </div>
+    </div>
+    
+    <div class="row">
+      
+        <div class="col-md-4">
             <%=image_tag("yelena.jpg", alt: "Yelena Photo", class: "profilePic")%>
         </div>
         
