added video to team page

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -15,6 +15,7 @@
             <p>Her work and expertise has taken her to various countries in Africa, Asia, Europe and Latin America. In the UK, Indira works as a freelance welfare rights advisor at Freedom From Torture. She is also on the Advisory Board of GERMIN, a Kosovo diaspora initiative, and ‘Impacto’, a Malaysian social enterprise. Previously, she was President of the judging panel for the Social Enterprise Reporting Awards (SERAs), an initiative of CSR Nigeria.</p>
             <p>Indira has over 15-years of experience in advice on welfare, housing and immigration rights and her expertise ranges from issues of forced migration and human rights, to social entrepreneurship and gender equality.</p>
             <p>Since completing her MA in Refugee Studies and her groundbreaking research on austerity and welfare reforms, Indira has been invited to speak at various conferences and seminars around the world.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KbOdSURXYCA?ecver=1" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
